# wg_display

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  Rocket.toml  WIDGETS.md  install_on_raspberry.py  project_report.md  widget_store.json
.cargo/: config.toml
.github/workflows/: build.yml  build_release.yml  build_widget_store_page.yml  cargo_test.yml
app/: Cargo.toml  Cross.toml
app/src/: main.rs
app/src/renderer/: config_to_widgets.rs  mod.rs
app/src/renderer/widgets/: aare.rs  base.rs  bernaqua.rs  buffet_nord.rs  cafete.rs  mod.rs  public_transport.rs  time.rs  today.rs
app/src/server/: mod.rs  persistence.rs
app/src/shared/: mod.rs  persistence.rs  widget_manager.rs
app/src/widgets/: mod.rs
app/src/widgets/host_api/: clocks.rs  http.rs  logging.rs  mod.rs  random.rs  types.rs
app/src/widgets/running/: runtime.rs
app/src/widgets/store/: mod.rs  widget_store.rs
app/src/widgets/utils/: loader.rs  logging.rs  mod.rs
app/src/widgets/wit/: clocks.wit  http.wit  logging.wit  plugin.wit  random.wit  types.wit
common/: Cargo.toml
common/src/: lib.rs  models.rs  widget_meta_data.rs  widget_store_item.rs  widgets.rs
docs/: dump.md  frontend_technical_overview.md  project_report.md  write_new_widget.md
frontend/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/assets/html/: widget_config.html
frontend/src/: main.rs
frontend/src/components/: background_color_config.rs  config_card.rs  default_widget_config.rs  divider.rs  error_display.rs  mod.rs  public_transport_config.rs  widget_config.rs
frontend/src/pages/: config_schema.rs  home.rs  install.rs  mod.rs
frontend/src/routing/: router.rs
scripts/: cargo_update.sh
scripts/generate_widget_store_page/: Cargo.toml
scripts/generate_widget_store_page/src/: main.rs
src/: main.rs
src/configuration_backend/: configuration.rs  mod.rs  persistence.rs
src/configuration_frontend/: Cargo.toml  index.html  package-lock.json  package.json
src/configuration_frontend/src/: main.rs
src/renderer/: mod.rs
widgets/AareGuru/: plugin.wasm
widgets/aare/: config.json
widgets/c_plugin/: plugin.wasm
