[package]
name = "wg_display"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/eliabieri/wg_display"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.25.0"
