[package]
name = "app"
version = "1.1.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/eliabieri/wg_display"
license-file = "LICENSE"

[dependencies]
common = { path = "../common" }

# General
anyhow = "1.0.68"
tokio = { version = "1.28.1", features = ["full"] }

# Widgets
openssl = { version = "0.10", features = ["vendored"] }
async-trait = "0.1.58"
futures = "0.3.25"
scraper = "0.14.0"
wasmtime = { version = "8.0.0", features = ["component-model"] }
wit-component = "0.8.1"
log = "0.4.17"
simple_logger = "4.1.0"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde_json = "1.0.96"
rand = "0.8.5"

## Time
chrono = "0.4.22"
time-humanize = "0.1.3"

# Rendering
cursive = { version = "0.20.0", features = [
    "termion-backend",
], default-features = false }
hostname = "0.3.1"

# Server
time = { version = "0.3.17", features = ["serde-well-known"] }
urlencoding = "2.1.2"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rust-embed = "6.4.2"

# Persistence
sled = "0.34.7"
lazy_static = "1.4.0"
