[package]
name = "app"
version = "2.0.2"
edition = "2024"
readme = "README.md"
repository = "https://github.com/eliabieri/wg_display"
license-file = "LICENSE"

[dependencies]
common = { path = "../common" }

# General
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["full"] }

# Widgets
openssl = { version = "0.10.67", features = ["vendored"] }
async-trait = "0.1.83"
futures = "0.3.31"
wasmtime = { version = "27.0.0", features = ["component-model"] }
wasmtime-wasi = "27.0.0"
log = "0.4.22"
simple_logger = "5.0.0"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde_json = "1.0.128"
bincode = "1.3.3"
rand = "0.8.5"

# Rendering
cursive = { git = "https://github.com/gyscos/cursive", features = [
    "termion-backend",
], default-features = false }
hostname = "0.4.0"

# Server
time = { version = "0.3.36", features = ["serde-well-known"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
rust-embed = { version = "8.5.0", features = ["include-exclude"] }

# Persistence
sled = "0.34.7"
lazy_static = "1.5.0"
