[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.147", features = ["derive"] }
yew = { version = "0.20.0", features = ["csr"] }
gloo-net = "0.2.4"
gloo-console = "0.2.3"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
