[package]
name = "common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.210", features = ["derive"] }
yew = { version = "0.20.0", features = ["csr"] }
gloo-net = "0.4.0"
gloo-console = "0.3.0"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
