[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
web-sys = { version = "0.3.60", features = [
    "HtmlSelectElement",
    "HtmlInputElement",
] }
wasm-bindgen = "0.2.83"
gloo-net = "0.2.4"
gloo-console = "0.2.3"
wasm-bindgen-futures = "0.4.33"
captures = "0.1.0"
